# journal-reader

./: .gitignore  README.md  package-lock.json  package.json
prisma/: schema.prisma
prisma/migrations/20250829013839_init/: migration.sql
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  commands.rs  database.rs  import.rs  lib.rs  main.rs  search.rs
src/components/: Chat.tsx  Import.tsx  Search.tsx  Settings.tsx  Tagging.tsx  Timeline.tsx
